# DkS3-Server-Emulator-Rust-Edition

./: Cargo.toml  Settings.toml  build.rs
cwc/src/: lib.rs
dks3_proto/: Cargo.toml  build.rs
dks3_proto/proto/: frpg2_request.proto
dks3_proto/src/: lib.rs
dks3_proto/src/frame/: crypto.rs  decoder.rs  encoder.rs  mod.rs
dks3_proto/src/msg/: common.proto  frpg2_request.proto  mod.rs
dks3_server/: Cargo.toml
dks3_server/src/: connection.rs  context.rs  main.rs  service.rs
dks3_server/src/auth/: mod.rs
dks3_server/src/login/: handler.rs  mod.rs  server.rs
dks3_server/src/net/: connection.rs  message.rs  mod.rs  server.rs
dks3_server/src/server/: mod.rs  rsa_manager.rs
dks3_server/src/server/login_server/: mod.rs
dks3_server/src/server/login_server/login_client/: mod.rs
dks3_server/src/service/: auth.rs  game.rs  login.rs
dks3_server/src/udp/: mod.rs  server.rs
src/: main.rs
src/protobuf/: Frpg2RequestMessage.proto
src/server/: log_manager.rs  log_manager.rs.unused  mod.rs  rsa_manager.rs
src/server/login_client/: mod.rs
src/server/login_server/: mod.rs
src/server/login_server/login_client/: mod.rs
tools/binary-analysis/: README.md  frida_hook_functions.py  package-lock.json  package.json
tools/binary-analysis/agent/: index.ts
tools/binary-analysis/agent/hooks/: index.ts
tools/binary-analysis/agent/hooks/cwc/: encryption-print-plaintext.ts
tools/genrsa/: Cargo.toml
tools/genrsa/src/: main.rs
