[package]
name = "dks3_proto"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>", "Jellybaby34 <Jellybaby34@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
aead = "0.3"
hex = "0.4"
openssl = { version = "0.10", features = [] }
prost = "0.7"
rand = "0.8"
block-cipher = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.cwc]
path = "../cwc"
features = ["aes-mode", "from-software"]

[dependencies.tokio-util]
version = "0.6.3"
features = ["codec"]

[build-dependencies]
prost-build = "0.7"