[package]
name = "dks3_server"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@fastmail.com>", "Jellybaby34 <Jellybaby34@users.noreply.github.com>"]
edition = "2018"

[dependencies]
aead = "0.3"
async-trait = "0.1"
block-cipher = "0.8"
bytes = "1.0.0"
chrono = "0.4"
config = "0.10"
dks3_proto = { path = "../dks3_proto" }
futures = "0.3.12"
hex = "0.4.2"
mt19937 = "2.0"
openssl = { version = "0.10.32" }
opentelemetry-jaeger = { version = "0.11", features = ["collector_client", "reqwest_collector_client"] }
parking_lot = "0.11"
prost = "0.7.0"
protobuf = "2.24.1"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = "0.1.6"
tracing = "0.1.26"
tracing-opentelemetry = "0.13.0"
tracing-subscriber = "0.2.18"

[dependencies.cwc]
path = "../cwc"
features = ["aes-mode", "from-software"]

[dependencies.tokio-util]
version = "0.6.7"
features = ["net", "codec"]